# WEIGHTTRAINING-EDITOR

./: .gitignore  BUILD_SUCCESS.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  MACOS_CONVERSION_STATUS.md  MACOS_FIXES.md  OPTION_A_IMPLEMENTATION.md  PLAN_04.md  PLAN_SPEC.md  QUICKSTART.md  README.md  READY_TO_TEST.md  exercises.db  invalid_plan.json  performance_test.rs  test_kill9_recovery.sh  test_plan.json  test_sprint1.json  weightlifting-editor.desktop
apps/editor-gtk/: Cargo.toml
apps/editor-gtk/src/: main.rs
apps/editor-gtk/src/canvas/: display.rs  formatting.rs  mod.rs
apps/editor-gtk/src/dialogs/: comment.rs  day.rs  exercise.rs  exercise_groups.rs  media.rs  mod.rs  plan.rs  segment.rs  sync.rs  validation.rs
apps/editor-gtk/src/operations/: fixes.rs  groups.rs  mod.rs  plan.rs  plan_ops.rs  segment.rs
apps/editor-gtk/src/services/: autosave.rs  keyboard.rs  mod.rs  preferences.rs  recent_files.rs
apps/editor-gtk/src/state/: mod.rs  segment.rs
apps/editor-gtk/src/ui/: actions.rs  diff.rs  inspector.rs  mainmenu.rs  mod.rs  models.rs  plan.rs  schemes.rs  util.rs
apps/editor-gtk/src/ui/components/: canvas.rs  mod.rs  navigator.rs  preview_bar.rs  right_panel.rs
apps/editor-gtk/src/ui/exercise_menus/: add_dialogs.rs  complex_dialogs.rs  exercise_data.rs  mod.rs
apps/editor-gtk/src/ui/exercise_menus/complex/: circuit.rs  complex.rs  components.rs  mod.rs  scheme.rs  superset.rs
apps/editor-gtk/src/ui/exercise_menus/edit_dialogs/: circuit_edit.rs  complex_edit.rs  dialog_components.rs  mod.rs  scheme_edit.rs  superset_edit.rs
apps/editor-gtk/src/ui/menus/: mod.rs  recent_files.rs
apps/editor-gtk/src/ui/widgets/: exercise_search_widget.rs  group_search_widget.rs  mod.rs
apps/editor-macos/: .env.signing.example  .gitignore  AppIcon.icns  EXAMPLE_PLAN.json  Info.plist  Package.swift  README.md  build_rust.sh  build_swift_universal.sh  create-app-bundle.sh  run.sh  verify-universal.sh
apps/editor-macos/.build/: build.db  debug.yaml  plugin-tools.yaml
apps/editor-macos/Sources/: AppState.swift  ErrorLogger.swift  WeightliftingEditorApp.swift
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/schema/: plan_v0_3.json  plan_v0_4.json
crates/core/src/: attachments.rs  export.rs  export_test.rs  lib.rs  (+7 more)
crates/ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/ffi/include/: weightlifting_ffi.h
crates/ffi/src/: lib.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: cache.rs  csv_parser.rs  lib.rs  main.rs  metrics.rs
crates/validate/: Cargo.toml
scripts/: sync.sh  verify_plan_fields.py
tests/: performance_test.rs
(+325 files in other folders)
