`[workspace]
members = [
    "crates/core",
    "crates/validate",
    "crates/cli",
    "crates/indexer",
    "crates/ffi",
    "apps/editor-gtk"
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
md5 = "0.7"
csv = "1.3"
tempfile = "3.10"
