[package]
name = "weightlifting-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "comp"
path = "src/main.rs"

[dependencies]
weightlifting-core = { path = "../core" }
weightlifting-validate = { path = "../validate" }
weightlifting-indexer = { path = "../indexer" }
clap = { version = "4.0", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
csv = { workspace = true }