[package]
name = "weightlifting-ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "weightlifting_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
weightlifting-core = { path = "../core" }
weightlifting-validate = { path = "../validate" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
cbindgen = "0.24"
