[package]
name = "weightlifting-indexer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "weightlifting-indexer"
path = "src/main.rs"

[dependencies]
weightlifting-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
csv = { workspace = true }
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tempfile = { workspace = true }